maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:4: error: not found: value r
    i=r.nextInt(3)
      ^